carvel-packages/demo-openvscode-package/config/deployment.yml
#@ load("@ytt:data", "data")
#@ load("helpers.star", "labels_for_component")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: #@ data.values.namespace
  labels: #@ labels_for_component("openvscode-server")
spec:
  replicas: 1
  selector:
    matchLabels: #@ labels_for_component("openvscode-server")
  template:
    metadata:
      labels: #@ labels_for_component("openvscode-server")
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: server
        image: gitpod/openvscode-server
        resources:
          requests:
            memory: 256M
          limits:
            memory: 256M
        ports:
        - name: http
          containerPort: 3000
        livenessProbe:
          httpGet:
            port: http
            path: /
        readinessProbe:
          httpGet:
            port: http
            path: /
        volumeMounts:
        - mountPath: /home/workspace
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data-pv-claim
