carvel-packages/demo-openvscode-package/config/service.yml
#@ load("@ytt:data", "data")
#@ load("helpers.star", "labels_for_component")
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: #@ data.values.namespace
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http
  selector: #@ labels_for_component("openvscode-server")
